Merge r1727640 (with minor change) to the 1.2 branch.